index.css
:root{
    --cl: rgba(0, 0, 0, 0.1);
    --pg: grey;
    --bl: black;
    --wh: white;
    --li: #f4f4f4;
    --lb: #087fe7;
    --su: rgb(39, 36, 36);

    --h1: 41px;
    --qu: 38px;
    --h2: 37px;
    --h3: 24px;
    --fo: 15px;
    --yb: 14px;
    --nr: 55px;
    --pr: 12px;
}

@font-face {
    font-family: inter;
    src: url(Inter.ttf);
}

body{
    font-family: inter;
}

p{
    line-height: 1.5;
}

a{
    text-decoration: none;
    color: var(--bl);
}



/*HEADER*/

header{
    border-bottom: 1px solid var(--cl);
    height: 60px;
    margin: auto 20px;
    z-index: 100;
    background-color: var(--wh);

    display: flex;
    justify-content: space-between;
    align-items: center;

    position: fixed;
    top: 0;
    left: 0;
    right: 0;
}

#headerleft{
    display: flex;
    gap: 30px;
    align-items: center;
}

#barky{
    width: 110px;
    height: 23px;
}

#headerright{
    display: flex;
    align-items: center;
}

#headerright a{
    padding: 7px 10px;
    border-radius: 5px;
}

#headerright #demo{
    border-right: 1px solid var(--cl);
    padding-right: 10px;
}

#headerright #login{
    border-right: none;
    padding: 0 10px;
}

#subscription a{
    border-right: none;
    border-radius: 5px;
    color: var(--wh);
    background-color: var(--bl);
    padding: 7px 15px;
    box-shadow: 0 0px 5px 2px var(--cl);
}

#headerright a:hover{
    background-color: var(--cl);
}

#subscription a:hover{
    background-color: var(--su);
}



/*NAVIGATION*/

nav{
    display: flex;
}

nav img{
    margin-bottom: 2px;
}

.navitem{
    padding: 7px 10px;
    border-radius: 5px;
    position: relative;
}

.navitem:hover{
    background-color: var(--cl);
    cursor: pointer;
}

.submenu{
    position: absolute;
    top: 33px;
    left: 0;
    display: flex;
    flex-direction: column;

    padding: 5px 3px;
    border-radius: 5px;
    width: 270px;

    background-color: var(--wh);
    z-index: 1000;
    box-shadow: 0 0px 10px 5px var(--cl);

    display: none;
}

.submenu h4, p{
    margin: 0;
    font-weight: 500;
}

.submenu p{
    font-size: var(--fo);
    color: var(--pg);
    font-weight: 400;
}

.submenu a{
    padding: 5px;
    border-radius: 5px;
    display: flex;
    align-items: center;
    gap: 10px;
}

.submenu img{
    width: 25px;
    height: 25px;
    background-color: var(--wh);
    border: 1px solid var(--cl);
    padding: 5px;
    border-radius: 5px;
}

.submenu a:hover{
    background-color: var(--cl);
}

.navitem:hover .submenu{
    display: flex;
}

#normalsubmenu{
    width: 150px;
}

#normalsubmenu a, #downloadlinks a{
    padding-left: 10px;
}

#downloadsubmenu{
    width: 200px;
}

#downloadsubmenu p{
    line-height: 1;
    padding: 10px;
    font-size: var(--yb);
}

#bluelink{
    display: inline-block;
    color: var(--pg);
    background: none;
    text-decoration: underline;
}

#bluelink:hover{
    color: var(--lb);
}



/*CONTAINER*/

#container{
    max-width: 1000px;
    margin: 0 auto;
}



/*START*/

#start{
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 60px;
    padding-top: 130px;
    padding-bottom: 70px;
    align-items: center;
}

#startleft{
    max-width: 420px;
}

#start h1{
    font-size: var(--h1);
    margin-bottom: 0;
}

#start p{
    color: var(--pg);
    margin: 10px 0 25px 0;
}

#start img{
    max-width: 450px;
}



/*COMPANIES*/

#companies{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 35px;
    border-top: 1px solid var(--cl);
    border-bottom: 1px solid var(--cl);
    padding: 30px;
}

#companies img{
    max-height: 23px;
}



/*MAIN*/

main{
    padding: 70px 0;
}

main img{
    max-width: 100%;
    box-shadow: 0 0px 30px 5px var(--cl);
    margin: 40px 0;
}

main h2{
    font-size: var(--h2);
    margin: 0;
    max-width: 420px;
}

.description{
    max-width: 490px;
    color: var(--pg);
}

.quote{
    font-size: var(--qu);
    font-weight: 550;
    color: var(--pg);
    text-align: center;
    line-height: 1.2;
    margin: 0 auto;
}

.person{
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 8px;
    margin: 10px 0 100px;
}

#lastperson{
    margin-bottom: 0;
}

.person img{
    box-shadow: none;
    width: 50px;
    margin: 0;
}

.who h3{
    margin-bottom: 0;
    font-size: var(--fo);
}

.who p{
    margin: 0 0 10px;
    color: var(--pg);
    font-size: var(--pr)
}



/*FREEPLAN*/

#freeplan{
    border-top: 1px solid var(--cl);
    border-bottom: 1px solid var(--cl);
    padding: 100px 0 0;
}

#freeplandescription{
    text-align: center;
    max-width: 580px;
    margin: 0 auto 70px;
}

#freeplandescription h2{
    font-size: var(--h2);
    margin: 0;
}

#freeplandescription p{
    color: var(--pg);
    margin: 5px 0 20px;
}

#freeplan ul{
    background-color:  var(--li);
    margin: 0 auto;
    max-width: 650px;
    padding: 20px 30px;
    border-radius: 10px;
    margin-bottom: 80px;
}

#freeplan li{
    border-bottom: 1px solid var(--cl);
    padding: 15px 0;

    display: flex;
    justify-content: space-between;
}

#freeplan li div{
    color: var(--pg);
}

#freeplan img{
    max-width: 15px;
}

#freeplan #lastlistitem{
    border-bottom: none;
}



/*INFORMATION*/

#information{
    text-align: center;
    padding: 80px 0;
}

#information h2{
    font-size: var(--h2);
    margin: 0;
}

#information p{
    color: var(--pg);
    padding-bottom: 10px;
}

#solve{
    margin: 10px 0 40px;
}

#categories{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
}

#categories a{
    color: var(--bl);
    text-shadow: 1px 1px 1px var(--cl);
}

#categories h3{
    margin-top: 0;
    font-size: var(--h3);
}

.category{
    border-right: 1px solid var(--cl);
    padding: 0 25px;
}

#lastcategory{
    border-right: none;
}



/*STATISTICS*/

#statistics h2{
    font-size: var(--h2);
    text-align: center;
}

#g2{
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    align-items: center;
    row-gap: 30px;
}

#g2left{
    grid-column: 1 / span 2;
}

#g2left h3{
    margin: 0;
    font-size: var(--h3);
}

#g2left p{
    margin-top: 5px;
    max-width: 450px;
}

#g2left a{
    text-decoration: underline;
}

#g2right{
    grid-column: 3 / span 2;
}

#g2 img{
    max-width: 450px;
}

.stats{
    text-align: center;
    color: var(--pg);

    border-right: 1px solid var(--cl);
    justify-content: center;
    padding: 5px;
}

.stats h1{
    font-size: var(--nr);
    margin: 0;
}

.stats p{
    margin: 0;
}

#laststat{
    border-right: none;
}

#trybarky{
    padding: 80px 0 100px;
    text-align: center;
}

#trybarky h2{
    margin: 0;
}

#trybarky p{
    margin: 5px 0 25px;
    color: var(--pg);
}



/*FOOTER*/

#footerbox{
    border-top: 1px solid var(--cl);
}

footer{
    max-width: 1200px;
    margin: 0 auto;
    padding: 80px 0;
    display: flex;
    flex-grow: 1;
    justify-content: space-between;
}

#share{
    max-width: 300px;
    font-size: var(--fo);
}

#media{
    margin: 20px 0 50px;
    max-width: 160px;
    display: flex;
    justify-content: space-between;
}

#barkyfooter{
    max-width: 150px;
}

#media img{
    height: 23px;
}

#personalinformation{
    margin-bottom: 20px;
}

footer ul{
    list-style: none;
    margin: 0;
    font-size: var(--fo);
}

footer li{
    margin-bottom: 10px;
}

footer a{
    color: var(--pg);
}

footer a:hover{
    text-decoration: underline;
}

footer #bold{
    color: var(--bl);
    font-weight: 600;
}





/*IPADVIEW*/

#ipadheader{
    border-bottom: 1px solid var(--cl);
    height: 60px;
    margin: auto 20px;
    z-index: 100;
    background-color: var(--wh);

    display: none;

    position: fixed;
    top: 0;
    left: 0;
    right: 0;
}

#ipadheaderright{
    display: flex;
    align-items: center;
    gap: 5px;
}

@media (max-width: 1080px){
    footer{
        display: grid;
        grid-template-columns: 1fr 1fr;
        row-gap: 25px;
        padding-left: 20px;
    }

    #share{
        grid-column: 1 /span 2;
        max-width: none;
    }

    footer ul{
        padding: 0;
    }

    #media{
        margin: 30px 0;
    }
}

@media (min-width: 601px) and (max-width: 1080px){
    
    header{
        display: none;
    }

    #ipadheader{
        display: flex;
        justify-content: space-between;
        align-items: center;
        
    }

    #start{
        display: flex;
        flex-direction: column-reverse;
        gap: 0;
        text-align: center;
    }

    #startleft{
        max-width: none;
    }

    #startleft p{
        max-width: 540px;
        margin: 20px auto;
    }

    #categories{
        display: grid;
        grid-template-columns: 1fr 1fr;
        gap: 50px;
    }

    .category{
        border-right: none;
    }

    .stats{
        border-right: none;
    }

    #firststat{
        grid-column: 1 / span 2;
    }

    #secondstat{
        grid-column: 3 / span 2;
    }

    #thirdstat{
        grid-column: 1 / span 2;
    }

    #laststat{
        grid-column: 3 / span 2;
    }
    
}






/*PHONEVIEW*/

#phoneheader{
    margin-top: 20px;
    display: none;
}

#hamburger{
    padding: 5px 10px 2px;
    border-radius: 5px;
    margin-right: 10px;
}

#hamburger img{
    width: 20px;
    height: 20px;
}

#hamburger:hover{
    background-color: var(--cl);
    cursor: pointer;
}

@media (max-width: 600px) {
    
    header{
        display: none;
    }

    #phoneheader{
        display: flex;
        justify-content: space-between;
    }

    #freeplandescription, #startleft, .quote{
        max-width: 470px;
    }

    #container{
        margin: 0 20px;
    }

    #start{
        display: flex;
        flex-direction: column-reverse;
        gap: 0;
    }

    #startleft{
        text-align: center;
    }

    main .description, main h2{
        text-align: center;
        margin: 0 auto;
        max-width: 520px;
    }

    .quote{
        font-size: var(--h3);
    }

    #categories{
        display: grid;
        grid-template-columns: 1fr;
    }

    .category{
        grid-column: 1 / span 3;
        border-right: none;
        padding: 0 0 40px;
    }

    #g2{
        display: flex;
        flex-direction: column;
    }

    #g2left p, #g2right img{
        max-width: 520px;
    }

    .stats{
        border-right: none;
    }

}

